[project]
name = "amazon-vendor-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "cachetools>=7.0.6",
    "cryptography>=46.0.7",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn>=0.44.0",
]
